--- a/mock_server/code/myapp/Readme
+++ b/mock_server/code/myapp/Readme
@@ -7,3 +7,8 @@
 	4. data类型包括三种，data、time、data_time。其中data形式："1929-04-10",time形式："12:06:12",data_time形式："1929-04-10 12:06:12".目前data只校验数据格式，并未校验月份小于12，天数小于31，特殊没有31天以及28和29天的情况，以及年份不超过今天。不支持写入状态。
 	5. Address包括country、province、city、region和zip。其中zip的校验为：是否为6位数字，其他项的校验为：是否为汉字。
 	6. 规则中保存数字时，以字符串形式保存。
+	7. type为float时，有value和value1，其中value1为小数部分的取值范围;value为整数部分的取值范围或者为float指定值。
+	8. type为int时，可指定值，也可以设置范围。
+	9. type为string时，可指定值，也可以设置范围。
+	10. type为array时，包含itemNum项，表示数组的项数，表现形式为数组，如果指定某一个值，则可以设置为[3,3]
+	11. type为object时，value值为key-value形式，key-value中的value又可以定义其他type类型或者指定值
